@@ -2,6 +2,8 @@ Version 0.5 (ongoing):
 	Fixed base_field equality check
 	Fixed Hadamard gate for Sage's SR
 	Full/partial trace function
+	Eigenvectors function
+	Diagonal matrix factory function
 
 Version 0.4 (2011-03-13):
 	Don't test for Sage on every base_field_lookup call
